Add test case with string model with example for #5778/#5460.
